# streamflow-azure

./: README.md  pyproject.toml  requirements.txt  setup.py  tox.ini
azure_batch_streamflow/: __init__.py  azure_bacth_plugin.py  config.py  executor.py
azure_batch_streamflow/schemas/: azure_bacth.json
azure_streamflow/: __init__.py  batch_connector.py  blob_connector.py  config.py  connector.py  executor.py  plugin.py
azure_streamflow/schemas/: azure_bacth.json  azure_blob.json
tests/: __init__.py  test_azure_batch_plugin.py  test_azure_plugin.py  test_bacth_connector.py  test_blob_connector.py
